# git-bundler

./: .gitignore  README.md  TESTING_STRATEGY.md  git-bundle.py  git_bundle.py  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  generate_test_repo.py  integration_test.py  test_git_bundle.py
